# gwbasic-c

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: docs.yml
docs/: architecture.md  conf.py  development.md  getting-started.md  index.md  language-reference.md  roadmap.md
include/: error.h  eval.h  gw_math.h  gwbasic.h  hal.h  interp.h  strings.h  tokens.h  tui.h  types.h
platform/: hal_posix.c
src/: error.c  eval.c  fileio.c  input.c  interp.c  main.c  math_float.c  math_int.c  math_transcend.c  print.c  print_using.c  program_io.c  strings.c  tokenizer.c  tokens.c  tui.c
tests/: dosbox-compat.conf  run_compat.sh  run_tests.sh  transform_for_capture.py
tests/programs/: datetime.bas  def_types.bas  error_handler.bas  file_io.bas  filesystem.bas  graphics_stubs.bas  hailstone.bas  hanoi.bas  hundred_doors.bas  luhn.bas  math_ops.bas  mid_assign.bas  mult_table.bas  on_timer.bas  pascal_triangle.bas  print_using.bas  roman_numerals.bas  save_load.bas  string_ops.bas  timer_stop.bas  write_input.bas
